cabal-version:      2.4
name:               vmod-loader
version:            1.5.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
description:
            Vmodloader is a module bundler to bundle neovim config files written in lua

-- A URL where users can report bugs.
bug-reports:
    https://github.com/v4zha/vmod-loader
-- The license under which the package is released.
-- license:
author:             v4zha
maintainer:         arvin_j4848@protonmail.com

-- A copyright notice.
-- copyright:
-- category:

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Vloader
    Vbanner
  build-depends:
    base >= 4.12.0.0 ,
    directory >= 1.3.3.0,
    filepath >= 1.4.2.1,
    yaml >= 0.11.8.0,
    text>=1.2.3.1,
    optparse-applicative>=0.17.0.0,
    termcolor>=0.2.0.0

executable vmod
  default-language: Haskell2010
  hs-source-dirs:   app 
  main-is:          Main.hs
  build-depends:
    base >= 4.12.0.0 ,
    directory >= 1.3.3.0,
    optparse-applicative>=0.17.0.0,
    termcolor>=0.2.0.0,
    vmod-loader>=1.5.0

Test-Suite test
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: test 
    main-is:    Main.hs
    build-depends: 
      base >= 4.12.0.0, 
      HUnit >=1.6.2.0,
      test-framework >= 0.8.2,
      test-framework-hunit >=0.3.0,
      vmod-loader >=1.5.0